--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,65 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="PPP.css">
     <title>Just a Little About Myself.  You Know How it Be.</title>
+    <style>
+            body {
+                border: 10px ridge rgb(54, 46, 46);
+                margin: 5;
+                padding: 0;
+            }
+        </style>
 </head>
 <body>
     <header>
         <h1>Marcus' Important Information</h1>
-        <caption>This is all the important information for me(maybe)</caption>
+        <caption>Family-Oriented Student</caption>
     </header>
     <main>
         <section id="about">
             <h1>
-                "About Me"
+                About Me
             </h1>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfDxXrRFFqVcmXHaJmy_yB_jxf-6HtjagPzw&s" alt="Basically me" <br>
             <p>
                 Welcome to Marcus' page.  I am a 24 year old kitchen and bathroom remodeler who is aspiring for a good career in life!
             </p>
         </section>
-        <section id="skills">
+        
+        <section id="Skills">
             <table border="5">
                 <caption>
-                    <strong>
-                        Marcus' Stats
-                    </strong>
+                    <h1>
+                        Marcus' Skills
+                    </h1>
                 </caption>
                 <tr>
-                    <th>Age</th>
-                    <th>Strength</th>
-                    <th>Dexterity</th>
-                    <th>Intelligence</th>
+                    <th>Jumping</th>
+                    <th>Running</th>
+                    <th>Typing</th>
+                    <th>Video Games</th>
+                    <th>Reading</th>
                     <th>Luck</th>
-                    <th>Charisma</th>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>10</td>
+                    <td>4</td>
+                    <td>4</td>
                     <td>7</td>
                     <td>3</td>
-                    <td>8</td>
-                    <td>20</td>
-                </tr>
-                <tr>
-                    <td>20</td>
-                    <td>50</td>
-                    <td>35</td>
-                    <td>25</td>
-                    <td>4</td>
-                    <td>10</td>
-                </tr>
-                <tr>
-                    <td>50</td>
-                    <td>?</td>
-                    <td>?</td>
-                    <td>?</td>
-                    <td>?</td>
-                    <td>?</td>
+                    <td>3</td>
                 </tr>
             </table>
         </section>
         <section id="contact form">
-            <p>
+            <p id="contact">
                 Please feel free to contact me through email, phone call, or text: <em>mrvwarnert@gmail.com</em>; <em>(805)670-3376</em>
             </p>
             <form action="/submit" method="POST">
@@ -70,18 +64,18 @@
                 <button type="submit">Submit</button>
             </form>
             <form action="/submit" method="POST">
-                <label for="email">email:</label>
+                <label for="email">Email:</label>
                 <input type="email" id="email" name="email">
                 <button type="submit">Submit</button>
             </form>
             <form action="/submit" method="POST">
-                <label for="message">Name:</label>
-                <textarea>id="email" name="email" rows="4" cols="50"</textarea>
+                <label for="message">Text:</label>
+                <textarea></textarea>
                 <button type="submit">Submit</button>
             </form>
         </section>
         <footer>
-            <p>Thank you for reading my website.  Godspeed.</p>
+            <p>Thank you for reading my website.  Godspeed. <br> Marcus Warnert</p>
         </footer>
     </main>
 </body>
